[package]
name = "tempoit"
version = "0.1.0"
authors = ["Samuel Walladge <samuel@swalladge.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
regex = "1.3.9"
reqwest = { version = "0.10.5", features = ["json", "cookies"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
tokio = { version = "0.2.21", features = ["full"] }
structopt = { version = "0.3.14", default-features = false }
confy = "0.4.0"
